# qub-drive

./: .eslintrc.js  .gitignore  package-lock.json  package.json  tsconfig.json
.kiro/specs/mobile-production-ready/: design.md  requirements.md  tasks.md
.kiro/steering/: mobile-docs.md
apps/backend/: .env.example
apps/backend/crates/core/: Cargo.toml
apps/backend/crates/core/src/: lib.rs
apps/backend/crates/infrastructure/: Cargo.toml
apps/backend/crates/infrastructure/src/database/: connection.rs
apps/backend/crates/infrastructure/src/repositories/: mod.rs  user_repository_impl.rs
apps/backend/crates/infrastructure/src/services/: auth_service_impl.rs  mod.rs
apps/backend/examples/: demo.rs  full_test.rs
apps/backend/migrations/: 001_initial.sql
apps/mobile/: .env.example  .gitignore  app.json  eslint.config.js  jest.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  collaboration.tsx  collaborative-spreadsheet-demo.tsx  document-demo.tsx  enhanced-form-builder-demo.tsx  form-builder-demo.tsx  form-management-demo.tsx  notifications.tsx  offline.tsx  sharing-demo.tsx  spreadsheet-demo.tsx  upload.tsx
apps/mobile/app/(tabs)/: _layout.tsx  files.tsx  index.tsx  recent.tsx  settings.tsx  shared.tsx
apps/mobile/app/auth/: biometric-setup.tsx  forgot-password.tsx  login.tsx  register.tsx  verify-email.tsx
apps/mobile/app/document/: [id].tsx  create.tsx
apps/mobile/app/file/: [id].tsx
apps/mobile/app/folder/: [id].tsx
apps/mobile/app/form/: [id].tsx
apps/mobile/app/settings/: biometric.tsx
apps/mobile/app/share/: [id].tsx
apps/mobile/app/spreadsheet/: [id].tsx
apps/mobile/src/components/: BiometricGuard.tsx  BiometricPrompt.tsx  BiometricSettings.tsx  FallbackAuth.tsx  index.ts  themed-text.tsx  themed-view.tsx
apps/mobile/src/config/: api.ts  constants.ts  index.ts
apps/mobile/src/constants/: documentTemplates.ts  index.ts
apps/mobile/src/hooks/: index.ts  useAuth.ts  useBiometric.ts  useCollaboration.ts  useDocuments.ts  useFileActions.ts  useFileOperations.ts  useFileUpload.ts  useFormBuilder.ts  useNotifications.ts  useOffline.ts  useOfflineEditing.ts  useSharing.ts  useSpreadsheet.ts  useSpreadsheetCollaboration.ts  useSync.ts  useTheme.ts
apps/mobile/src/providers/: AuthProvider.tsx  NotificationProvider.tsx  QueryProvider.tsx  index.ts
apps/mobile/src/services/: cellDependencyTracker.ts  collaborationService.ts  dataFormatting.ts  dataValidation.ts  documentService.ts  fileOperations.ts  formService.ts  formulaAutocomplete.ts  formulaEngine.ts  index.ts  notificationService.ts  offlineEditingService.ts  offlineFileManager.ts  sharingService.ts  spreadsheetCollaborationService.ts  spreadsheetService.ts  spreadsheetWebSocketAdapter.ts  syncManager.ts  syncQueue.ts  syncService.ts  uploadManager.ts  uploadNotifications.ts  websocketService.ts
apps/mobile/src/stores/: index.ts
apps/mobile/src/test/: auth-store.test.ts  auth.test.tsx  biometric-auth.test.ts  breadcrumb-navigation.test.tsx  dashboard-layout.test.tsx  document-editing-features.test.tsx  document-functionality.test.ts  file-actions.test.tsx  file-display.test.tsx  file-management.test.ts  file-picker.test.tsx  fileOperations.test.ts  run-sharing-tests.js  setup.ts  sharing-functionality.test.ts  sharing-integration.test.tsx  spreadsheetCollaboration.test.ts  storage.test.ts  upload-functionality.test.ts  uploadManager.test.ts  useSharing.test.tsx  validation.test.ts
apps/mobile/src/types/: api.ts  auth.ts  collaboration.ts  document.ts  expo-local-authentication.d.ts  file.ts  forms.ts  index.ts  navigation.ts  sharing.ts  spreadsheet.ts  spreadsheetCollaboration.ts  websocket.ts
apps/mobile/src/utils/: fileUtils.ts  (+5 more)
apps/server/: .gitignore  Procfile  package-lock.json  package.json  tsconfig.json
apps/server/prisma/: schema.prisma  seed.ts
apps/server/scripts/: deploy-heroku.sh  heroku-setup.sh  quick-deploy.sh  seed-production.js
apps/server/src/: index.ts
apps/web/: .env.example  .gitignore  LICENSE  bitbucket-pipelines.yml  index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/web/src/: index.css  main.tsx  routeTree.gen.ts
qubators-kingshare-backend/: .gitignore  Cargo.toml  Dockerfile  GETTING_STARTED.md  Makefile  README.md  docker-compose.yml
qubators-kingshare-backend/crates/api/: Cargo.toml
qubators-kingshare-backend/crates/api/src/: routes.rs
qubators-kingshare-backend/crates/api/src/handlers/: auth.rs  documents.rs  drive.rs  forms.rs  health.rs  shares.rs  spreadsheets.rs
qubators-kingshare-backend/crates/api/src/middleware/: mod.rs
qubators-kingshare-backend/crates/application/: Cargo.toml
qubators-kingshare-backend/crates/application/src/: lib.rs
qubators-kingshare-backend/crates/application/src/services/: auth_service.rs  user_service.rs
qubators-kingshare-backend/crates/core/src/: config.rs  error.rs  types.rs
qubators-kingshare-backend/crates/domain/: Cargo.toml
qubators-kingshare-backend/crates/domain/src/entities/: collaboration.rs  document.rs  drive.rs  file.rs  forms.rs  mod.rs  share.rs  user.rs
qubators-kingshare-backend/crates/domain/src/repositories/: file_repository.rs  mod.rs  share_repository.rs  spreadsheet_repository.rs  user_repository.rs
qubators-kingshare-backend/crates/domain/src/services/: auth_service.rs  storage_service.rs
qubators-kingshare-backend/crates/infrastructure/src/: lib.rs
qubators-kingshare-backend/crates/infrastructure/src/database/: migrations.rs  mod.rs
qubators-kingshare-backend/crates/infrastructure/src/repositories/: file_repository_impl.rs  share_repository_impl.rs
qubators-kingshare-backend/crates/infrastructure/src/services/: file_service_impl.rs  storage_service_impl.rs  websocket_service_impl.rs
qubators-kingshare-backend/docs/: api.md  deployment.md  websocket.md
qubators-kingshare-backend/migrations/: 002_google_drive_features.sql
qubators-kingshare-backend/src/: main.rs
qubators-kingshare-backend/tests/: integration_test.rs
tools/: build-all.js  dev-setup.js  verify-setup.js
(+511 files in other folders)
