[package]
name = "kingshare-backend"
version = "0.1.0"
edition = "2021"
authors = ["Qubators Team"]
description = "Enterprise-level backend for KingShare application"
license = "MIT"

[workspace]
members = [
    "crates/core",
    "crates/domain",
    "crates/infrastructure",
    "crates/application",
    "crates/api",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Web framework
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"
dashmap = "5.5"

# Document processing
serde_yaml = "0.9"
csv = "1.3"
calamine = "0.22"
office = "0.8"

# Real-time collaboration
operational-transform = "0.6"
yrs = "0.18"

# Template engine
handlebars = "4.5"
tera = "1.19"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"

# Validation
validator = { version = "0.18", features = ["derive"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Testing
mockall = "0.12"

[dependencies]
kingshare-core = { path = "crates/core" }
kingshare-domain = { path = "crates/domain" }
kingshare-infrastructure = { path = "crates/infrastructure" }
kingshare-application = { path = "crates/application" }
kingshare-api = { path = "crates/api" }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
config = { workspace = true }

[[bin]]
name = "server"
path = "src/main.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "full_test"
path = "examples/full_test.rs"

[dev-dependencies]
tempfile = "3.8"