[package]
name = "kingshare-domain"
version = "0.1.0"
edition = "2021"

[dependencies]
kingshare-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
validator = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
mockall = { workspace = true }